syntax = "proto3";

option java_package = "dev.slne.surf.shulker.proto.event";
option java_multiple_files = true;

service EventController {
  rpc subscribe(SubscribeEventRequest) returns (stream EventContext);
  rpc unsubscribe(SubscribeEventRequest) returns (UnsubscribeEventResponse);
  rpc callEvent(EventContext) returns (CallEventResponse);
}

message SubscribeEventRequest {
  string event_name = 1;
  string service_name = 2;
}

message EventContext {
  string event_fqcn = 1;
  string event_name = 2;
  string event_data = 3;
}

message CallEventResponse {
  bool success = 1;
  string message = 2;
}

message UnsubscribeEventResponse {
  bool success = 1;
  string message = 2;
}